# emi-compass

./: .gitignore  README.md  pyproject.toml
samples/: sample_bead.s2p
scripts/: make_article1_figures.py  make_article2_figures.py  make_article3_figures.py
src/emi_compass/: __init__.py  cli.py  models.py
tests/: test_models.py
